添加自定义View组件

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CrazyAndroid</string>
+    <string name="OK">OK</string>
+    <string name="Hello">Hello</string>
 </resources>
